--- a/src/components/FeedItem.css
+++ b/src/components/FeedItem.css
@@ -35,3 +35,9 @@
     border-radius: 15px;
     background-color: #ff4757;
 }
+.openText {
+    color: #2ed573;
+}
+.closedText {
+    color: #ff4757;
+}
