--- a/src/components/App.css
+++ b/src/components/App.css
@@ -28,3 +28,18 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.appbarWeatherContain {
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+  color: white;
+  height: 48px;
+  font-size: 1.3em;
+  padding-right: 8px;
+  cursor: pointer;
+}
+
+.appbarWeatherIcon {
+  margin: 3px 5px 0 0;
+}
