--- a/src/components/FeedItem.css
+++ b/src/components/FeedItem.css
@@ -14,14 +14,22 @@
     display: flex;
     flex-direction: column;
     text-align: left;
+    flex: 1;
+    min-width: 0;
 }
 .mainText {
     margin: 0 0 3px;
     font-size: 16px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .subText {
-    margin: 0;
+    margin: 0 10px 0 0;
     font-size: 14px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .openIndicator {
     width: 30px;
@@ -40,4 +48,11 @@
 }
 .closedText {
     color: #ff4757;
+}
+.itemImage {
+    height: 50px;
+    width: 50px;
+    margin-right: 10px;
+    object-fit: cover;
+    border-radius: 3px;
 }
